[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/circle-crusher-border.png" type="Texture" id=1]
[ext_resource path="res://Crusher.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/pop.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/circle-crusher-bg.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/hit.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 8.0

[node name="CircleCrusher" type="RigidBody2D"]
input_pickable = true
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="bg" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="border" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="pop_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="pop_tween" type="Tween" parent="."]

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_CircleCrusher_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CircleCrusher_body_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_CircleCrusher_tree_exiting"]
[connection signal="tween_all_completed" from="pop_tween" to="." method="_on_pop_tween_tween_all_completed"]
