[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/triangle-crusher-border.png" type="Texture" id=1]
[ext_resource path="res://assets/triangle-crusher-bg.png" type="Texture" id=2]
[ext_resource path="res://Crusher.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/pop.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/hit.wav" type="AudioStream" id=5]

[node name="TriangleCrusher" type="RigidBody2D" groups=[
"crushers",
]]
input_pickable = true
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="border" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7.5, 8, 0, -6, 7.5, 8 )

[node name="pop_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="pop_tween" type="Tween" parent="."]

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[connection signal="tween_all_completed" from="pop_tween" to="." method="_on_pop_tween_tween_all_completed"]
